navbar wip - links + basic hover effects

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,7 @@
   --color-secondary: var(--secondary);
   --color-primary-foreground: var(--primary-foreground);
   --color-primary: var(--primary);
+  --color-primary-border: var(--primary-border);
   --color-popover-foreground: var(--popover-foreground);
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
@@ -53,6 +54,7 @@
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.15 0.05 264);
   --primary-foreground: oklch(0.985 0 0);
+  --primary-border: oklch(0.25 0.06 264);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
